# slurm-monitor-top

./: .gitignore  LICENSE  README.md  pyproject.toml  stop.py
src/slurm_stop/: app.py
src/slurm_top/: app.py
