[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-monitor-top"
version = "0.1.2"
description = "htop-like monitor for Slurm jobs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "slurm-monitor-top contributors"}]
dependencies = [
  "rich",
  "textual",
]

[project.scripts]
slurm-top = "slurm_top.cli:main"
stop = "slurm_top.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
